scale yarn nodemanager and set maximum-am-resource-percent to 50%